# demos

intra_process_demo/: CMakeLists.txt
intra_process_demo/include/image_pipeline/: camera_node.hpp
lidar-segmentation/: .gitignore  README.md  rviz_base_config.rviz
lidar-segmentation/docker/: Dockerfile  docker-compose.yml  ros_pubkey
lidar-segmentation/src/lidarsegm_pjfa/: CMakeLists.txt  lidarsegm_pjfa.xml  package.xml
lidar-segmentation/src/lidarsegm_pjfa/include/: GlobalHeader.h  blob.h  blobdetector.h  config.h  grid.h  ibeo_segmenter.h  kalman_filter.h  lipe_interface.h  logger.h  segmenter.h  tracker.h  velodyne_segmenter.h  velodyne_segmenter_algo.h  visualizer.h
lidar-segmentation/src/lidarsegm_pjfa/launch/: lidarsegm_pjfa.launch
lidar-segmentation/src/lidarsegm_pjfa/lib/hungarian_method/include/: HungarianMethod.h
lidar-segmentation/src/lidarsegm_pjfa/lib/hungarian_method/src/: HungarianMethod.cpp
lidar-segmentation/src/lidarsegm_pjfa/models/pointnet_training/: NN.py  datasets.py  inference.py  inference_output  pypcd.py  training.py  utils.py
lidar-segmentation/src/lidarsegm_pjfa/models/pointnet_training/losses/: loss.py
lidar-segmentation/src/lidarsegm_pjfa/models/pointnet_training/models/: pointnet_classifier_anorexic.py  pointnet_classifier_extra_skinny.py  pointnet_classifier_extra_skinny_and_short.py  pointnet_classifier_git0.py  pointnet_classifier_git1.py  pointnet_classifier_skinny.py
lidar-segmentation/src/lidarsegm_pjfa/msg/: FreeSpace.msg  Object.msg  ObjectList.msg
lidar-segmentation/src/lidarsegm_pjfa/src/: blob.cpp  blobdetector.cpp  grid.cpp  ibeo_segmenter.cpp  kalman_filter.cpp  lipe_interface.cpp  rosbag_reordering.py  segmenter.cpp  tracker.cpp  velodyne_segmenter.cpp  velodyne_segmenter_algo.cpp  visualizer.cpp
lidar-segmentation/src/lidarsegm_pjfa/test/: utest_grid.cpp  utest_logger.cpp
lidar-segmentation/src/lidarsegm_pjfa/tools/kitti_parser/: CMakeLists.txt  kitti_parser.cpp  kitti_parser.h  startup.sh
lidar-segmentation/src/lidarsegm_pjfa/tools/pytorch_inference/: CMakeLists.txt  model.pt  pytorch_cpp_inference.info
lidar-segmentation/src/lidarsegm_pjfa/tools/velodyne/: CMakeLists.txt  mainpage.dox  nodelet_plugins.xml  package.xml
lidar-segmentation/src/lidarsegm_pjfa/tools/velodyne/include/velodyne/: defaultcal.h  velodyneConfig.h  velodyne_driver_nodelet.h  velodyne_projector.h  velodyne_projector_filter.h  velodyne_raw_message_filter.h  velodyne_scan.hpp  velodyne_scan_image.hpp  velodyne_scan_image_v1.hpp  velodyne_scan_v1.hpp  velodyne_segments.hpp  velodyne_segments_v1.hpp
lidar-segmentation/src/lidarsegm_pjfa/tools/velodyne/launch/: default_velodyne_params.launch  velodyne.launch  velodyne_driver.launch  velodyne_point_cloud_standalone.launch  velodyne_projector_standalone.launch  velodyne_to_pointcloud.launch
lidar-segmentation/src/lidarsegm_pjfa/tools/velodyne/src/: velodyneConfig.cpp  velodyne_driver_nodelet.cpp  velodyne_point_cloud_nodelet.cpp  velodyne_projector.cpp  velodyne_projector_filter.cpp  velodyne_projector_nodelet.cpp  velodyne_raw_message_filter.cpp  velodyne_read_params.cpp  velodyne_to_pointcloud_nodelet.cpp
rclcpp/services/minimal_client/: CMakeLists.txt  main.cpp
rclcpp/services/minimal_service/: CMakeLists.txt
rclcpp/topics/minimal_publisher/: CMakeLists.txt
rclcpp/topics/minimal_subscriber/: CMakeLists.txt
rclpy/services/minimal_client/examples_rclpy_minimal_client/: client.py
rclpy/services/minimal_service/examples_rclpy_minimal_service/: service.py
track_to_track_fusion/: CMakeLists.txt  CMakeListsRos2.txt  jy_test.txt  package.xml
track_to_track_fusion/config/ros2/: top95.yaml  top95_fusion_with_8_sensors.yaml
track_to_track_fusion/include/objects_prediction/: objects_predictor.h
track_to_track_fusion/include/objects_processors/: existence_threshold_filter.h  objects_processors.h
track_to_track_fusion/include/ros/: fusion_node.hpp
track_to_track_fusion/include/ros2/: fusion_node.hpp
track_to_track_fusion/include/track_to_track_fusion/: fusion_interface.h  fusion_preprocessor_interface.h  noncopyobjects.h  object_with_trace.h  trace_storage.h  weights.h
track_to_track_fusion/include/track_to_track_fusion/cost/: cost_functions.h
track_to_track_fusion/include/track_to_track_fusion/feature/: feature_fusion_interfaces.h
track_to_track_fusion/src/objects_prediction/: constant_velocity.cpp
track_to_track_fusion/src/objects_processors/: existence_threshold_filter.cpp
track_to_track_fusion/src/ros2/: fusion_node.cpp
track_to_track_fusion/src/track_to_track_fusion/: fusion_interface.cpp  fusion_preprocessor_interface.cpp  object_fusion_executer.cpp  trace_storage.cpp
track_to_track_fusion/src/track_to_track_fusion/feature/: classification.cpp
track_to_track_fusion/test/: objects_prediction_tests.cpp
tutorial/WGS84toCartesian/: blh2enu.cpp  enu_geo.cpp  enu_geo.hpp  wgs_conversions.cpp  wgs_conversions.h
tutorial/WGS84toCartesian/test/: Test-WGS84toCartesian.cpp
tutorial/debug_json/: launch.json
tutorial/projects/: 2-topic.md  3-service.md  4-executor-intra_process_image_pipeline_demo.md  public_ros2_projects.md
tutorial/ros2/: 0-linux.md  1-basic.md  2-markdown.md
