<?xml version="1.0"?>
<package format="2">
  <name>velodyne</name>
  <version>0.0.0</version>
  <description>The velodyne package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="PJ-FA@todo.todo">PJ-FA</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>Bosch INTERNAL</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/velodyne</url> -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend>
  <build_depend>pjfa_cmake_modules</build_depend>
 -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>pjfa_cmake_modules</build_depend>

  <depend>roscpp</depend>
  <depend>vfc</depend>
  <depend>pcl_ros</depend>
  <depend>tf</depend>
  <depend>message_filters</depend>
  <depend>lidar_msgs</depend>
  <depend>velodyne_msgs</depend>
  <depend>driving_common</depend>
  <depend>nodelet</depend>
  <depend>geometry_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>diagnostic_updater</depend>
  <depend>libxml++-2.6</depend>
  <depend>roslaunch</depend>
  <depend>vlr_exception</depend>
  <depend>velodyne_intensity_calibration</depend>
  <depend>time_jitter_compensation</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->
    <cpp cflags="-I${prefix}/include" lflags="-L${prefix}/lib  -lvelocore"/>
    <nodelet plugin="${prefix}/nodelet_plugins.xml"/>
    <rosbag migration_rule_file="migration_rules/projected_spin.bmr"/>

  </export>
</package>
